Fix spacing for checkbox input

--- a/style.css
+++ b/style.css
@@ -170,4 +170,5 @@ input.error {
   display: flex;
   flex-direction: row;
   margin-top: 0.5rem;
+  gap: 0.5rem;
 }
